--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Professional web agency delivering modern, responsive websites and digital solutions">
+  <meta name="description" content="Join us in celebrating the wedding of Keerthana & Sahil on February 8, 2026, in Kolar. We invite you to share this wonderful occasion with us!">
   <meta name="format-detection" content="telephone=no">
   
-  <title>Webgency - Modern Web Agency</title>
+  <title>Keerthana & Sahil - Wedding Invitation</title>
   
   <!-- DNS Prefetch for external domains -->
   <link rel="dns-prefetch" href="https://fonts.googleapis.com">
