--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Join us in celebrating the wedding of Keerthana & Sahil on February 8, 2026, in Kolar. We invite you to share this wonderful occasion with us!">
   <meta name="format-detection" content="telephone=no">
+  <meta name="color-scheme" content="light only">
+  <meta name="supported-color-schemes" content="light">
   
   <title>Keerthana & Sahil - Wedding Invitation</title>
   
