Updating meta description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Join us in celebrating the wedding of Keerthana & Sahil on February 8, 2026, in Kolar. We invite you to share this wonderful occasion with us!">
+  <meta name="description" content="Join us in celebrating our wedding on February 8, 2026, in Kolar. We invite you to share this wonderful occasion with us!">
   <meta name="format-detection" content="telephone=no">
   <meta name="color-scheme" content="light only">
   <meta name="supported-color-schemes" content="light">
