--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="hero-divider">
           <img src="assets/images/decorative-line.webp" alt="" class="decorative-line">
         </div>
-        <h1 id="hero-names" class="hero-names">Keerthana & Sahil</h1>
+        <h1 id="hero-names" class="hero-names">Keerthana & Sahil Rao</h1>
         <h2 class="hero-heading">We are inviting you to our wedding!</h2>
         <p class="hero-subtitle">Let's celebrate the best day of our life together!</p>
       </div>
@@ -129,13 +129,13 @@
             <table class="event-schedule">
               <tbody>
                 <tr>
-                  <td class="time">01:00 PM</td>
                   <td class="event-name">Haldi</td>
+                  <td class="time">12:00 PM</td>
                 </tr>
                 
                 <tr>
-                  <td class="time">06:00 PM</td>
                   <td class="event-name">Sangeet</td>
+                  <td class="time">06:00 PM</td>
                 </tr>
               </tbody>
             </table>
@@ -147,8 +147,8 @@
             <table class="event-schedule">
               <tbody>
                 <tr>
-                  <td class="time">06:30 PM</td>
                   <td class="event-name">Reception</td>
+                  <td class="time">06:30 PM</td>
                 </tr>
               </tbody>
             </table>
@@ -160,8 +160,8 @@
             <table class="event-schedule">
               <tbody>
                 <tr>
-                  <td class="time">10:30 AM</td>
                   <td class="event-name">Muhuratham</td>
+                  <td class="time">10:30 AM</td>
                 </tr>
               </tbody>
             </table>
