Correcting map locations

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
               <h3 class="tab-location-title">Venue Location</h3>
               <p class="tab-location-subtitle">Bangalore Events</p>
               <div class="tab-location-map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.0!2d77.5946!3d12.9716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTLCsDU4JzE3LjgiTiA3N8KwMzUnNDAuNiJF!5e0!3m2!1sen!2sin!4v1000000000000!5m2!1sen!2sin" 
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6966.892462041127!2d78.18357083515305!3d13.133108633445794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3badf13997cc48d1%3A0xc04f2ec1470bd623!2sSri%20Nandhini%20Palace!5e0!3m2!1sen!2sin!4v1766860897387!5m2!1sen!2sin" 
                         width="400" 
                         height="250" 
                         style="border:0;" 
@@ -216,13 +216,13 @@
           <div id="lucknow" class="tab-panel">
             <div class="timeline-tables-wrapper">
               <div class="timeline-table">
-                <div class="timeline-date">8 February</div>
+                <div class="timeline-date">13 February</div>
                 
                 <table class="event-schedule">
                   <tbody>
                     <tr>
-                      <td class="event-name">Muhurtham</td>
-                      <td class="time">10:30 AM</td>
+                      <td class="event-name">Reception</td>
+                      <td class="time">08:00 PM</td>
                     </tr>
                   </tbody>
                 </table>
@@ -234,7 +234,7 @@
               <h3 class="tab-location-title">Venue Location</h3>
               <p class="tab-location-subtitle">Lucknow Events</p>
               <div class="tab-location-map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d227748.3825624477!2d80.77769250000001!3d26.8466777!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399bfd991f32b16b%3A0x93ccba8909978be7!2sLucknow%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1000000000001!5m2!1sen!2sin" 
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1575.4072335040926!2d80.98546438469862!3d26.78112290235936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399bfbf231950a11%3A0x7bc2028921edc2f8!2sThe%20Grand%20Casa!5e0!3m2!1sen!2sin!4v1766861032112!5m2!1sen!2sin" 
                         width="400" 
                         height="250" 
                         style="border:0;" 
