--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <!-- Logo Image -->
         <img src="assets/images/logo.png" alt="Wedding Logo" style="width: 140px; height: 140px; object-fit: contain; margin-bottom: 15px;">
         <!-- Text Content -->
-        <p style="font-family: 'Yesteryear', cursive; font-size: 2.3rem; margin: 0 0 30px 0; color: #313131;">You're Invited!</p>
+        <p style="font-family: 'Yesteryear', cursive; font-size: 2.3rem; margin: 0 0 30px 0; color: #1a1a1a;">You're Invited!</p>
         <button id="popup-enter" style="padding: 12px 20px; font-size: 0.9rem; font-weight: 500; background: #3c4435; border: none; border-radius: 15px; color: white; cursor: pointer; transition: transform 0.2s ease, box-shadow 0.2s ease; font-family: 'Rufina', serif;">Discover the details</button>
       </div>
     </div>
