--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   
   <title>Keerthana & Sahil - Wedding Invitation</title>
   
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/images/logo.png">
+  <link rel="manifest" href="data:application/json,{}">
+  
   <!-- DNS Prefetch for external domains -->
   <link rel="dns-prefetch" href="https://fonts.googleapis.com">
   <link rel="dns-prefetch" href="https://fonts.gstatic.com">
