Add '(Pista Green or Beige)' line to dress code section

--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
             </button>
             <div class="accordion-content">
               <p class="dress-code-intro">This style guide has been curated to help our guests dress in harmony with the wedding theme.</p>
+              <p class="dress-code-intro">(Pista Green or Beige)</p>
               
               <div class="color-palette">
                 <div class="color-swatch" style="background-color: #E9F5DB;" aria-label="Light Green"></div>
