Font size increase

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
             <img src="assets/images/org-image.jpeg" alt="Wedding couple" class="org-image" loading="lazy">
             <div class="org-image-overlay">
               <div class="org-image-content">
-                <p class="org-phone">!</p>
+                <p class="org-phone">We are looking forward to your presence!</p>
               </div>
             </div>
           </div>
