--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         
         <!-- Tab Navigation -->
         <div class="itinerary-tabs">
-          <button class="tab-button active" data-tab="bangalore">Bangalore</button>
+          <button class="tab-button active" data-tab="bangalore">Kolar</button>
           <button class="tab-button" data-tab="lucknow">Lucknow</button>
         </div>
         
@@ -204,7 +204,7 @@
             <!-- Bangalore Location -->
             <div class="tab-location">
               <h3 class="tab-location-title">Venue Location</h3>
-              <p class="tab-location-subtitle">Bangalore Events</p>
+              <p class="tab-location-subtitle">Kolar Events</p>
               <div class="tab-location-map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6966.892462041127!2d78.18357083515305!3d13.133108633445794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3badf13997cc48d1%3A0xc04f2ec1470bd623!2sSri%20Nandhini%20Palace!5e0!3m2!1sen!2sin!4v1766860897387!5m2!1sen!2sin" 
                         width="400" 
@@ -213,7 +213,7 @@
                         allowfullscreen="" 
                         loading="lazy" 
                         referrerpolicy="no-referrer-when-downgrade"
-                        title="Bangalore Venue Location">
+                        title="Kolar Venue Location">
                 </iframe>
               </div>
             </div>
